Use Verbosity aware print function

--- a/ipython-try/LWS-ParseArchDef.ipynb
+++ b/ipython-try/LWS-ParseArchDef.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def verbose_print (string, verbose_level, verbose_setting):\n",
+    "    ''' Print the string with formatting if verbose_level\n",
+    "    is more than the verbose_setting assigned to the statement\n",
+    "    Lower the verbose_setting, \n",
+    "        Args:\n",
+    "        string: the string to be printed\n",
+    "        verbose_level: current verbose level requested\n",
+    "        verbose_setting: Fixed verbosity level of the statement\n",
+    "    '''\n",
+    "    if verbose_level >= verbose_setting:\n",
+    "        if verbose_setting == 0:\n",
+    "            print ('[ERROR]: ' + string) # Always printed \n",
+    "        elif verbose_setting == 1: \n",
+    "            print ('[WARNING]: ' + string) # verbosity_level should be atleast 1\n",
+    "        elif verbose_setting == 2:\n",
+    "            print ('[INFO]: ' + string) # verbosity_level should be atleast 2\n",
+    "        else: \n",
+    "            print ('[INFO]: ' + string) # helps to print extremly verbose info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,33 +58,31 @@
     "    \n",
     "    # TODO Sanity Checks for Components\n",
     "    \n",
-    "    if verbose >= 1:\n",
-    "        print ('Parsed Arch file: ' + filePath)\n",
-    "    if verbose >= 2:\n",
-    "        print (yaml.dump(ymlList))\n",
+    "    verbose_print ('Parsed Arch file: ' + filePath, verbose, 2)\n",
+    "    verbose_print (yaml.dump(ymlList), verbose, 3)\n",
     "        \n",
     "    return ymlList"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parsed Arch file: simple-arch.yaml\n",
-      "- Component1: {BasicBlock1.xx: 10, BasicBlock1.xx.yy1: 4}\n",
+      "[INFO]: Parsed Arch file: simple-arch.yaml\n",
+      "[INFO]: - Component1: {BasicBlock1.xx: 10, BasicBlock1.xx.yy1: 4}\n",
       "- Component2: {BasicBlock1.xx: 3, Component1: 2}\n",
       "\n",
-      "[{'Component1': {'BasicBlock1.xx': 10, 'BasicBlock1.xx.yy1': 4}}, {'Component2': {'BasicBlock1.xx': 3, 'Component1': 2}}]\n"
+      "[{'Component1': {'BasicBlock1.xx': 10, 'BasicBlock1.xx.yy1': 4}}, {'Component2': {'Component1': 2, 'BasicBlock1.xx': 3}}]\n"
      ]
     }
    ],
    "source": [
-    "print (parseArchFile('simple-arch.yaml',verbose=2))"
+    "print (parseArchFile('simple-arch.yaml',verbose=3))"
    ]
   },
   {
